--- a/artifact/requirements.txt
+++ b/artifact/requirements.txt
@@ -2,6 +2,7 @@ fastprogress
 japanize-matplotlib
 nb-black
 jupyterlab_materialdarker
+jupyterlab-code-formatter
 jupyterlab-nvdashboard
 bokeh==2.4.1
 optuna
